@@ -110,6 +110,7 @@ setup(name=name,
         'cdecimal': ['cdecimal'],
         'Levenshtein': ['python-Levenshtein'],
         'BCrypt': ['bcrypt'],
+        'html2text': ['html2text'],
         },
     zip_safe=False,
     test_suite='trytond.tests',
